--- a/bingo.html
+++ b/bingo.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="bingo.css" />
 	</head>
 <body>
-<div id="spacer">&nbsp;</div>
+<div id="header">&nbsp;</div>
 <div id="bingo-flash">
 	<table id="table">
 		<tr>
